@@ -1,5 +1,6 @@
 2.0.0 (master)
 * drop official support for Ruby 1
+* remove boson
 
 1.7.1
 * bump binding.repl, hirb, methodfinder
